fix(app): visible overflow-y

--- a/client/src/pages/_GlobalStyle/style.scss
+++ b/client/src/pages/_GlobalStyle/style.scss
@@ -14,4 +14,6 @@
     margin: 0;
     height: min-content;
     width: auto;
+
+    overflow-y: visible;
 }
